<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Common.LoginSignUp.PasswordUpdateSuccessful"
    android:orientation="vertical"
    android:padding="10dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/back_icon"
        android:padding="5dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_updated"
        android:textAllCaps="true"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="40dp"
        android:textSize="40sp"
        android:fontFamily="@font/brandon_grotesque_bold"
        android:textColor="@color/colorAccent"/>
    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/forgot_password_icon"
        android:layout_margin="20dp"
        android:layout_gravity="center"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_updated_detail"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="16sp"
        android:fontFamily="@font/brandon_grotesque_medium"
        android:textColor="@color/colorAccent"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:text="@string/log_in"
        android:background="@color/colorAccent"
        android:textColor="@color/whiteColor"
        android:onClick="callLoginScreen"/>
</LinearLayout>