<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Common.LoginSignUp.SignUp">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/whiteDark"
        android:orientation="vertical"
        android:padding="20dp"
        android:transitionName="transition_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".Common.LoginSignUp.SignUp">

        <ImageView
            android:id="@+id/sign_up_back_arrow_btn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:src="@drawable/back_icon"
            android:transitionName="transition_back_arrow_btn" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/sign_up_title_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/brandon_grotesque_bold"
                    android:text="@string/create_account_2"
                    android:textAllCaps="true"
                    android:textColor="@color/colorAccent"
                    android:textSize="40sp"
                    android:transitionName="transition_title_txt" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/full_name"
                        android:textColorHint="@color/colorAccent"
                        app:boxStrokeColor="@color/colorAccent"
                        app:boxStrokeWidthFocused="2dp"
                        app:endIconMode="clear_text"
                        app:hintTextColor="@color/colorAccent"
                        app:startIconDrawable="@drawable/edit_icon"
                        app:startIconTint="@color/colorAccent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/ed_full_name"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="text"
                            android:textAllCaps="true" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/admission_no"
                        android:textColorHint="@color/colorAccent"
                        app:boxStrokeColor="@color/colorAccent"
                        app:boxStrokeWidthFocused="2dp"
                        app:endIconMode="clear_text"
                        app:hintTextColor="@color/colorAccent"
                        app:startIconDrawable="@drawable/profile_icon"
                        app:startIconTint="@color/colorAccent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/ed_adm_number"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="text"
                            android:textAllCaps="true" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:textColorHint="@color/colorAccent"
                        app:boxStrokeColor="@color/colorAccent"
                        app:boxStrokeWidthFocused="2dp"
                        app:endIconMode="clear_text"
                        app:hintTextColor="@color/colorAccent"
                        app:startIconDrawable="@drawable/mail_icon"
                        app:startIconTint="@color/colorAccent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/ed_email"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="textEmailAddress"
                            android:textAllCaps="false" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:textColorHint="@color/colorAccent"
                        app:boxStrokeColor="@color/colorAccent"
                        app:boxStrokeWidthFocused="2dp"
                        app:endIconMode="password_toggle"
                        app:hintTextColor="@color/colorAccent"
                        app:startIconDrawable="@drawable/password_icon"
                        app:startIconTint="@color/colorAccent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/ed_pass"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="textPassword" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/confirm_password"
                        android:textColorHint="@color/colorAccent"
                        app:boxStrokeColor="@color/colorAccent"
                        app:boxStrokeWidthFocused="2dp"
                        app:endIconMode="password_toggle"
                        app:hintTextColor="@color/colorAccent"
                        app:startIconDrawable="@drawable/password_icon"
                        app:startIconTint="@color/colorAccent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/ed_confirm_pass"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="textPassword" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <Button
                    android:id="@+id/sign_up_next_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@color/colorAccent"
                    android:onClick="callNextSignUpScreen"
                    android:text="@string/next"
                    android:textAllCaps="true"
                    android:textColor="@color/whiteDark"
                    android:transitionName="transition_next_btn" />

                <Button
                    android:id="@+id/sign_up_login_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:background="#00000000"
                    android:onClick="callLoginScreen"
                    android:text="@string/log_in"
                    android:textAllCaps="true"
                    android:transitionName="transition_login_btn" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>