<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Common.LoginSignUp.SignUp2ndClass"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/whiteDark"
    android:transitionName="transition_login">

    <ImageView
        android:id="@+id/sign_up_back_arrow_btn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/back_icon"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:transitionName="transition_back_arrow_btn"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/sign_up_title_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:text="@string/create_account_2"
                android:textAllCaps="true"
                android:textSize="40sp"
                android:fontFamily="@font/brandon_grotesque_bold"
                android:transitionName="transition_title_txt"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="40dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Your Phone Number:"
                    android:textColor="@color/colorAccent"
                    android:fontFamily="@font/brandon_grotesque_bold"
                    android:textSize="18sp"/>
                <!--                <com.hbb20.CountryCodePicker/>-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <com.hbb20.CountryCodePicker
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        app:ccp_autoDetectCountry="true"
                        app:ccp_showNameCode="false"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_marginRight="5dp"
                        android:background="@drawable/black_border"/>
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/phone_number"
                        app:startIconDrawable="@drawable/phone_icon"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        app:startIconTint="@color/colorAccent"
                        app:hintTextColor="@color/colorAccent"
                        android:textColorHint="@color/colorAccent"
                        app:endIconMode="clear_text"
                        app:boxStrokeWidthFocused="2dp"
                        app:boxStrokeColor="@color/colorAccent">
                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="phone"/>
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </LinearLayout>
            <Button
                android:id="@+id/sign_up_next_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:background="@color/colorAccent"
                android:onClick="callVerificationCode"
                android:textAllCaps="true"
                android:textColor="@color/whiteDark"
                android:layout_marginTop="40dp"
                android:transitionName="transition_next_btn"/>
            <Button
                android:id="@+id/sign_up_login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/log_in"
                android:background="#00000000"
                android:textAllCaps="true"
                android:layout_gravity="center"
                android:transitionName="transition_login_btn"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>